Bug 91613 - Writer: cannot open sections with double click in the status bar anymore
Summary: Writer: cannot open sections with double click in the status bar anymore
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta4 ta...
Keywords: regression
: 90450 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-25 13:01 UTC by Timur
Modified: 2016-10-25 19:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2015-05-25 13:01:32 UTC
In a document with sections, such as attachment 115834 [details] from Bug 91483:

Current: open Sections only through Format-Sections
Expected: open sections by double click in Sections part of status bar

Used to work fine up to 4.3.7. Marked as regression.
Comment 1 Cor Nouws 2015-05-25 17:40:23 UTC
Hi Timur,

Can confirm this on Ubuntu.

Cheers,
Cor
Comment 2 Yousuf Philips (jay) (retired) 2015-05-26 16:29:58 UTC
Attachment 115834 [details] is a pdf, so i'm assuming the actual document is attachment 115920 [details].

In mouse click behaviour in the status bar was changed in bug 82707 in 4.4.
Comment 3 Cor Nouws 2015-05-26 19:08:18 UTC
So it may be changed with http://cgit.freedesktop.org/libreoffice/core/commit/?id=0280a35b20448b7f678b6e150cbc2564da4910ce

@samuel: is it possible to bring back opening the dialog for a section, if indicated in the status bar?
Comment 4 Timur 2015-05-27 09:06:20 UTC
(In reply to Yousuf (Jay) Philips from comment #2)
> In mouse click behaviour in the status bar was changed in bug 82707 in 4.4.
If this means that click shouldn't be double, but rather single left click, fine.
Comment 5 Yousuf Philips (jay) (retired) 2015-05-27 19:31:20 UTC
Yes the behaviour was changed so that double-click actions were executed when single clicked.
Comment 6 Andras Timar 2015-06-10 20:39:30 UTC
commit ebabf6d1fa648d62dd63529e9fe64dcb631caee8
Author: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
Date:   Sat Nov 8 23:02:11 2014 +0100

    fdo#86018 Don't do anything when clicked on placeholder in statusbar
    
    No idea why this code got executed in sw, it has no action in sd and sc.
    

This commit removed the feature. I think it should be restored. Removing functionality that we don't understand is not always a good idea.
Comment 7 Commit Notification 2015-06-11 05:15:50 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a2716e53c140b09d886591a3d6611ee8f166e417

tdf#91613 restore functionality of clicking to .uno:Size status bar element

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-06-11 15:56:47 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9940e12730a7179cd62e02faa41dc3a81d3ad721&h=libreoffice-5-0

tdf#91613 restore functionality of clicking to .uno:Size status bar element

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Timur 2015-06-12 06:56:56 UTC
Thanx. Can this be backported to 4.4?
Comment 10 Commit Notification 2015-07-02 15:54:52 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ea10bbd898f31565e5cdfb2612b1e8b22ed3809&h=libreoffice-4-4

tdf#91613 restore functionality of clicking to .uno:Size status bar element

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2016-07-29 09:30:18 UTC
*** Bug 90450 has been marked as a duplicate of this bug. ***