tdf#91613 restore functionality of clicking to .uno:Size status bar element

... in Writer.

This (partially) reverts commit ebabf6d1fa648d62dd63529e9fe64dcb631caee8.
I did not see the point to open Fields dialog by default, but other uses
are fully valid.

Change-Id: Ia06803fbb956266fb40c53f51099f9a32ddd6548